Add SpringDataMongoDB Model

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>SpringDataJPA</module>
         <module>SpringDataRedis</module>
+        <module>SpringDataMongoDB</module>
     </modules>
 
 
