--- a/SpringDataJPA/pom.xml
+++ b/SpringDataJPA/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.test</groupId>
+    <groupId>com.example</groupId>
     <artifactId>SpringDataJPA</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
