add SpringDataElasticsearch model

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>SpringDataRedis</module>
         <module>SpringDataMongoDB</module>
         <module>SpringDataNeo4j</module>
+        <module>SpringDataElasticsearch</module>
     </modules>
 
 
